cabal-version:      3.6
name:               test
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             gunbamz
maintainer:         muyiwaoluleye06@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable test
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Parsing, App

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
      base ^>=4.16.1.0,
      haskell-say ^>=1.0.0.0,
      transformers ^>=0.5.6.2
    hs-source-dirs:   app
    default-language: Haskell2010
